# twitch-dashboard

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  constants.rs  events.rs  main.rs  oauth.rs  state.rs
src/api/: client.ts  custom-rewards.tsx  validate.ts
src/components/: main-page.tsx  topbar.tsx
src/components/login/: login-btn.scss  login-btn.tsx
src/components/swap-keyboard/: swap-keyboard.tsx
src/context/: auth.context.tsx  twitch-api.context.tsx
src/features/auth/: create-auth-url.ts
src/hooks/: use-internal-port.ts  use-tauri-event.ts
src/lib/: constants.ts
src/machines/: assert-event-type.ts
src/machines/auth/: auth.actions.ts  auth.machine.ts  auth.services.ts  auth.types.ts
src/store/: user.store.ts
