[package]
name = "ritual-twitch"
version = "0.0.0"
description = "A desktop client for managing our Twitch integrations"
authors = ["Bryan Muller"]
license = "GPL-v3"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
anyhow = "1.0.71"
log = "^0.4"
reqwest = { version = "0.11.17", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tauri = { version = "1.3", features = ["http-all", "shell-open"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tiny_http = "0.12.0"
url = { version = "2.3.1", features = ["serde"] }

[dependencies.windows]
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]
version = "0.48.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
